src/app/globals.css
@import "tailwindcss";

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #FEEDFF; 
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
}

.dark body {
    @apply bg-gray-950 text-purple-900;
}

